apps/speedtest-tracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: speedtest-tracker
    app.kubernetes.io/part-of: speedtest-tracker
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: speedtest-tracker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: speedtest-tracker
    spec:
      nodeSelector:
        kubernetes.io/hostname: pj
      containers:
        - name: speedtest-tracker
          image: ghcr.io/alexjustesen/speedtest-tracker:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: speedtest-tracker-config
