apps/speedtest-tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: speedtest-tracker
    app.kubernetes.io/part-of: speedtest-tracker
spec:
  type: ClusterIP
  clusterIP: 10.43.100.25
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: speedtest-tracker
